@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -8,6 +8,14 @@
     <artifactId>davinci-parent_2.11</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <modules>
         <module>server</module>
@@ -18,41 +26,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <junit.version>4.12</junit.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <scala.library>2.11</scala.library>
         <scala.version>2.11.8</scala.version>
+        <scala.binary.version>2.11</scala.binary.version>
         <scalatest.version>2.2.5</scalatest.version>
-        <akka.version>2.4.17</akka.version>
-        <akka-http.version>10.0.5</akka-http.version>
-        <slick.version>3.2.0</slick.version>
-        <kafka.version>0.10.0.0</kafka.version>
-        <hadoop.version>2.7.1</hadoop.version>
-        <hbase.version>1.1.2</hbase.version>
-        <spark.version>2.0.2</spark.version>
-        <tachyon.version>0.7.1</tachyon.version>
-        <zookeeper.version>3.4.6</zookeeper.version>
-        <jackson.version>2.6.5</jackson.version>
-        <json4s.version>3.2.11</json4s.version>
-        <slf4j.version>1.7.21</slf4j.version>
-        <guava.version>19.0</guava.version>
-        <edp-moonbox.version>1.0-SNAPSHOT</edp-moonbox.version>
     </properties>
 
-
-    <distributionManagement>
-        <repository>
-            <id>ce-nexus</id>
-            <url>http://10.100.31.71:8080/nexus/content/repositories/snapshots/</url>
-        </repository>
-    </distributionManagement>
-
-    <!-- common repositories -->
     <repositories>
         <repository>
             <id>central</id>
-            <!-- This should be at top, it makes maven try the central repo first and then others and hence faster dep resolution -->
             <name>Maven Repository</name>
             <url>https://repo1.maven.org/maven2</url>
             <releases>
@@ -62,31 +43,8 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>ce.thirdparty</id>
-            <url>http://10.100.31.71:8080/nexus/content/repositories/thirdparty/</url>
-        </repository>
-        <repository>
-            <id>ce.snapshots</id>
-            <url>http://10.100.31.71:8080/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>oracle</id>
-            <url>http://code.lds.org/nexus/content/groups/main-repo/</url>
-        </repository>
-
-        <repository>
-            <id>conjars.org</id>
-            <url>http://conjars.org/repo/</url>
-        </repository>
-        <repository>
-            <id>springrepo</id>
-            <url>http://repo.spring.io/libs-release-remote/</url>
-        </repository>
-
     </repositories>
 
-    <!-- common pluginRepositories -->
     <pluginRepositories>
         <pluginRepository>
             <id>central</id>
@@ -98,52 +56,39 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
-        <pluginRepository>
-            <id>sonatype-oss-public</id>
-            <url>https://oss.sonatype.org/content/groups/public/</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>scala-tools.org</id>
-            <name>Scala-tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </pluginRepository>
     </pluginRepositories>
 
-
     <dependencies>
-
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.library}</artifactId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
             <version>${scalatest.version}</version>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
-
     </dependencies>
-
 
     <build>
         <plugins>
+            <!-- ========================================================== -->
+            <!-- compile scala and java -->
+            <!-- ========================================================== -->
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <!-- The scala-maven-plugin is used for compiling/testing/running/documenting scala code in maven -->
                 <version>3.2.2</version>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
-                    <scalaCompatVersion>${scala.library}</scalaCompatVersion>
+                    <scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>
                     <recompileMode>incremental</recompileMode>
-                    <useZincServer>true</useZincServer>
+                    <useZincServer>false</useZincServer>
                     <args>
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
                         <arg>-feature</arg>
                     </args>
                     <jvmArgs>
-                        <!--<jvmArg>-Xss2m</jvmArg>-->
-                        <jvmArg>-Xms512M</jvmArg>
-                        <jvmArg>-Xmx2048M</jvmArg>
-                        <jvmArg>-XX:MaxPermSize=2048M</jvmArg>
+                        <jvmArg>-Xms1024m</jvmArg>
+                        <jvmArg>-Xmx1024m</jvmArg>
                         <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                     </jvmArgs>
                     <javacArgs>
@@ -175,8 +120,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <!-- The Compiler Plugin is used to compile the sources of your project -->
-                <version>3.5.1</version>
+                <version>3.6.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -205,7 +149,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <!-- The Surefire Plugin is used during the test phase of the build lifecycle to execute the unit tests of an application -->
                 <version>2.19.1</version>
                 <configuration>
                     <skipTests>true</skipTests>
@@ -221,7 +164,7 @@
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
                     <filereports>EDPTestSuite.txt</filereports>
-                    <argLine>-Xms512M -Xmx2048M -XX:MaxPermSize=2048M -XX:+CMSClassUnloadingEnabled</argLine>
+                    <argLine>-Xms512M -Xmx2048M -XX:+CMSClassUnloadingEnabled</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -232,8 +175,70 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- ========================================================== -->
+            <!-- license -->
+            <!-- ========================================================== -->
+            <!--<plugin>-->
+            <!--<groupId>com.mycila</groupId>-->
+            <!--<artifactId>license-maven-plugin</artifactId>-->
+            <!--<version>3.0</version>-->
+            <!--<inherited>false</inherited>-->
+            <!--<configuration>-->
+            <!--<header>misc/license_header.txt</header>-->
+            <!--<aggregate>true</aggregate>-->
+            <!--<properties>-->
+            <!--<inceptionYear>${project.inceptionYear}</inceptionYear>-->
+            <!--</properties>-->
+            <!--<includes>-->
+            <!--<include>src/**/*.java</include>-->
+            <!--<include>src/**/*.scala</include>-->
+            <!--<include>src/**/*.xml</include>-->
+            <!--</includes>-->
+            <!--<excludes>-->
+            <!--<exclude>**/logback.xml</exclude>-->
+            <!--<exclude>**/logback-test.xml</exclude>-->
+            <!--<exclude>**/src/test/resources/**</exclude>-->
+            <!--</excludes>-->
+            <!--</configuration>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>check-license</id>-->
+            <!--<phase>initialize</phase>-->
+            <!--<goals>-->
+            <!--<goal>check</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.13</version>
+                <configuration>
+                    <aggregateDownloadLicenses.executeOnlyOnRootModule>true</aggregateDownloadLicenses.executeOnlyOnRootModule>
+                    <executeOnlyOnRootModule>true</executeOnlyOnRootModule>
+                    <outputDirectory>${project.basedir}</outputDirectory>
+                    <fileTemplate>/org/codehaus/mojo/license/third-party-file-groupByLicense.ftl</fileTemplate>
+                    <useMissingFile>true</useMissingFile>
+                    <missingFile>${project.basedir}/THIRD-PARTY.properties</missingFile>
+                    <aggregateMissingLicensesFile>${project.basedir}/THIRD-PARTY.properties</aggregateMissingLicensesFile>
+                    <licenseMerges>
+                        <licenseMerge>Apache 2.0|ASL, version 2|http://www.apache.org/licenses/LICENSE-2.0.txt|http://asm.ow2.org/license.html|The Apache License, Version 2.0|Apache License|Apache License Version 2|Apache License Version 2.0|Apache Software License - Version 2.0|Apache 2.0 License|Apache License 2.0|ASL|Apache 2|Apache-2.0|the Apache License, ASL Version 2.0|The Apache Software License, Version 2.0|Apache License, Version 2.0|Apache Public License 2.0</licenseMerge>
+                        <licenseMerge>BSD|The BSD 3-Clause License|The BSD License|Modified BSD License|New BSD License|New BSD license|Two-clause BSD-style license|BSD licence|BSD New|The New BSD License|BSD 3-Clause|BSD 3-clause</licenseMerge>
+                        <licenseMerge>MIT|MIT License|The MIT License</licenseMerge>
+                        <licenseMerge>LGPL|LGPL, version 2.1|GNU Library or Lesser General Public License (LGPL) V2.1|GNU Lesser General Public License (LGPL), Version 2.1|GNU Lesser General Public License, Version 2.1|LGPL 2.1</licenseMerge>
+                        <licenseMerge>CDDL|CDDL+GPL|CDDL+GPL License|CDDL + GPLv2 with classpath exception|CDDL License|CDDL 1.0|CDDL 1.1|COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0|Common Development and Distribution License (CDDL) v1.0</licenseMerge>
+                        <licenseMerge>EPL|Eclipse Public License - Version 1.0</licenseMerge>
+                        <licenseMerge>GPL|GPL2 w/ CPE|GPLv2+CE|GNU General Public Library</licenseMerge>
+                        <licenseMerge>MPL|MPL 1.1</licenseMerge>
+                        <licenseMerge>Public Domain</licenseMerge>
+                        <licenseMerge>Common Public License|Common Public License Version 1.0</licenseMerge>
+                        <licenseMerge>CC0|CC0 1.0 Universal|Public Domain, per Creative Commons CC0</licenseMerge>
+                        <licenseMerge>Unknown License|Unknown license</licenseMerge>
+                    </licenseMerges>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-
 </project>
